--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,11 @@
 <% provide(:title, "Home") %>
-
+<div class="center jumbotron">
     <h1>Home</h1>
-    <p>
+    <h2>
       This is a test page.
-    </p>
+    </h2>
+    
+    <%= link_to "sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+</div>
+    <%= link_to image_tag("rails.png", alt: "rail logo"), "http://rubyonrails.org"%>
  
